# as2_knowledge_graph

./: .gitignore  CMakeLists.txt  dependencies.repos  package.xml
.github/workflows/: build_humble.yaml
include/as2_knowledge_graph/: as2_knowledge_graph_client.hpp  as2_knowledge_graph_service.hpp
include/as2_knowledge_graph/utils/: as2_knowledge_graph_graph_utils.hpp
include/my_graph/: NewNode.hpp  ServiceClient.hpp  as2_knowledge_graph_client.hpp  as2_knowledge_graph_graph_utils.hpp  as2_knowledge_graph_service.hpp  new_node.hpp  service_client.hpp
launch/: as2_knowledge_graph_launch.py
log/: latest_test
src/: as2_knowledge_graph_node_server.cpp  as2_knowledge_graph_node_server_main.cpp  as2_knowledge_graph_service_client.cpp  as2_knowledge_graph_service_client_main.cpp  graph_utils.cpp  new_client.cpp  new_client_main.cpp  new_edge_server.cpp  new_node.cpp  new_node_client.cpp  new_server.cpp  new_server_main.cpp  service_client.cpp
srv/: CreateEdge.srv  CreateNode.srv  RemoveEdge.srv  RemoveNode.srv
tests/: CMakeLists.txt  server_test.cpp  server_test_gtest.cpp  server_test_methods_gtest.cpp  service2_test_.cpp  service3_test_gtest.cpp  service_simple_test_.cpp  service_test_.cpp  service_test_gtest.cpp
