<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>as2_knowledge_graph</name>
  <version>0.0.1</version>
  <description>Package to create a knowledge graph</description>
  <maintainer email="c.derojas@alumnos.upm.es"></maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>knowledge_graph</depend>
  <depend>knowledge_graph_msgs</depend>
  <depend>as2_knowledge_graph_msgs</depend>
  <depend>backward_ros</depend>
  <depend>as2_core</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <!-- <member_of_group>rosidl_interface_packages</member_of_group> -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
